# norns-event-demo

./: .gitignore  CMakeLists.txt  README.md
mod/lib/: mod.lua
src/: CMakeLists.txt  lua_event_demo.cpp  lua_event_demo.h
